--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT=5000
-REDIS_URL=redis://localhost:6379
-QDRANT_URL=http://localhost:6333
+REDIS_URL=redis://red-d363nivdiees738pud5g:6379
+QDRANT_URL=https://11c2a732-4fac-4085-b0cd-6c3449e2bc06.eu-central-1-0.aws.cloud.qdrant.io:6333
+QDRANT_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.lBNkA6S2Vt_wZBh1X9nunVWNQMdRyMmaNK-DR-J8kfs
 JINA_API_KEY=jina_fd72c228f8bf49e68733755dd0450c68ehbsrGbl64EsAanMsFeZoBdq_5Kj
 GEMINI_API_KEY=AIzaSyAQ_GGHXe3uTaUpcfF7HYmv0AmctB1DI-k
 NODE_ENV=development
